--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,25 @@
     width: 100%;
   }
   .login input {
-    width: 100%;
+    width: 90%;
   }
+  .login .form-submit {
+    font-size: 18px;
+  }
+}
 
+@media only screen and (max-width: 480px) {
+  .login .form-submit {
+      max-width: 90%;
+  }
+  .login p,
+  .login #text-intro,
+  .login label {
+      font-size: 16px;
+  }
+  .login #logo {
+      height: 100px;
+  }
 }
 
 /* NAVBARS */
