--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 /* LOGIN PAGE */
 
 .login {
-    width: 700px;
+    width: 70%;
     margin: 0 auto;
     border: 2px #333 solid;
     text-align: center;
@@ -74,7 +74,7 @@
 
 .login .form-submit {
     font-family: TradeGothicLT-BoldCondTwenty, HelveticaNeue-CondensedBold, "Franklin Gothic Medium", sans-serif;
-    max-width: 80%;
+    max-width: 700px;
     height: 50px;
     font-size: 20px;
     text-align: center;
@@ -95,6 +95,7 @@
   }
   .login input {
     width: 90%;
+    height: 30px;
   }
   .login .form-submit {
     font-size: 18px;
@@ -102,13 +103,16 @@
 }
 
 @media only screen and (max-width: 480px) {
+  .login {
+    width: 100%;
+  }
   .login .form-submit {
       max-width: 90%;
   }
   .login p,
   .login #text-intro,
   .login label {
-      font-size: 16px;
+      font-size: 17px;
   }
   .login #logo {
       height: 100px;
