--- a/css/styles.css
+++ b/css/styles.css
@@ -129,9 +129,17 @@
   }
 }
 
+/* moviles */
 @media only screen and (max-width: 480px) {
   .login {
     width: 100%;
+  }
+  .login #logo {
+    height: 40px;
+  }
+  .login #header {
+      height: 160px;
+      background-position-y: -20px;
   }
   .login .form-submit {
       max-width: 90%;
@@ -140,10 +148,6 @@
   .login #text-intro,
   .login label {
       font-size: 17px;
-  }
-  .login #header {
-      height: 150px;
-      background-position-y: -20px;
   }
 }
 
